[package]
name = "pachimg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI application to convert to 3-bit color images reminiscent of nostalgic PCs"
authors = ["PARADISO <paradiso@ymail.ne.jpj>"]
readme = "README.md"
repository = "https://github.com/PARA-DISO/PachImg"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.7"
# Serdes(JSON)
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
# 乱数
rand = "0.8.5"
rand_mt = "4.2.2"
# コマンドライン引数パーサ
clap = {version = "4.4.14", features = ["derive"] }
# 色空間変換用
palette = "0.7.3"